RESOLVED FIXED217250
"http:" should not be a valid URL
https://bugs.webkit.org/show_bug.cgi?id=217250
Summary "http:" should not be a valid URL
Alex Christensen
Reported 2020-10-02 14:36:30 PDT
"http:" should not be a valid URL
Attachments
Patch (40.36 KB, patch)
2020-10-02 14:50 PDT, Alex Christensen
no flags
Patch (41.25 KB, patch)
2020-10-02 18:47 PDT, Alex Christensen
no flags
Patch (42.98 KB, patch)
2020-10-03 10:02 PDT, Alex Christensen
no flags
Patch (42.85 KB, patch)
2020-10-03 10:03 PDT, Alex Christensen
ews-feeder: commit-queue-
Alex Christensen
Comment 1 2020-10-02 14:50:49 PDT
Alex Christensen
Comment 2 2020-10-02 18:47:03 PDT
Alex Christensen
Comment 3 2020-10-03 10:02:33 PDT
Alex Christensen
Comment 4 2020-10-03 10:03:44 PDT
EWS
Comment 5 2020-10-03 10:05:17 PDT
ChangeLog entry in LayoutTests/ChangeLog contains OOPS!.
Alex Christensen
Comment 6 2020-10-03 11:39:49 PDT
Radar WebKit Bug Importer
Comment 7 2020-10-03 11:40:20 PDT
Fujii Hironori
Comment 8 2020-10-04 14:33:14 PDT
Filed: Bug 217298 – [curl] WebSocket tests are failing since r267931
Note You need to log in before you can comment on or make changes to this bug.