"http:" should not be a valid URL https://bugs.webkit.org/show_bug.cgi?id=217250

Reviewed by Brady Eidson.

LayoutTests/imported/w3c:

* web-platform-tests/url/a-element-expected.txt:
* web-platform-tests/url/a-element-xhtml-expected.txt:
* web-platform-tests/url/url-constructor-expected.txt:

Source/WebCore:

* workers/service/context/ServiceWorkerThreadProxy.cpp:
(WebCore::topOriginURL):
Fix strange code written in r226257 that relied on the ability to assemble URLs starting with the protocol only.

Source/WTF:

Same with https, ws, wss, and for some reason ftp.
This matches the URL specification and Chrome and Firefox.

* wtf/URLParser.cpp:
(WTF::URLParser::parse):

Tools:

* TestWebKitAPI/Tests/WTF/URLParser.cpp:
(TestWebKitAPI::TEST_F):

LayoutTests:

* platform/mac-wk1/imported/w3c/web-platform-tests/url/failure-expected.txt: Removed.



Canonical link: https://commits.webkit.org/230042@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267931 268f45cc-cd09-0410-ab3c-d52691b4dbfc